--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
 .container {
-  width: 1200px;
+  width: 1134px;
   padding: 0 15px;
   margin: auto;
 }
 
 body {
   min-height: 100vh;
-
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
+
 }
 main {
    flex-grow: 1;
@@ -17,28 +19,139 @@ main {
 
 /* SITE HERADER PART */
 
-#header-site {
-  
-}
 
 .site-header {
-
+  padding-top: 48px;
 }
 
-.herder-logo {
-
+.header-logo {
+  width: 149px;
+  height: 25px;
 }
 
-.header-nav {
-
+.header-nav-list {
+  width: 453px;
+  list-style-type: none;
 }
 
-.herder-nav-list {
-
+.header-nav-item {
+  font-size: 13px;
+  line-height: 17px;
+  text-align: right;
+  letter-spacing: 1.5px;
+}
+.header-nav-item:hover .header-nav-link {
+  color: #FA5959;
 }
 
-.herder-nav-item {
+.header-nav-link {
+  text-decoration: none;
+  color: #242A45;
+}
 
+.header-btn {
+  background: #FA5959;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  border: 2px solid transparent;
+  padding: 12px 34px;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 17px;
+  letter-spacing: 1.5px;
+  color: #fff;
+  cursor: pointer;
+}
+.header-nav-item:hover .header-btn {
+  background: #fff;
+  border: 2px solid #FA5959;
+  color: #FA5959;
+}
+
+
+/* HERO PART  */
+
+.hero-part {
+  padding-top: 114px;
+  padding-bottom: 80px;
+  background-image: url('../imgs/hero-backround.png');
+  background-size: auto 352px;
+  background-repeat: no-repeat;
+  background-position: bottom 80px right 200px;
+}
+
+.hero-box {
+  position: relative;
+  padding-bottom: 100px;
+}
+
+.hero-main {
+  width: 540px;
+  padding-top: 71px;
+}
+
+.hero-title {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 52px;
+  letter-spacing: -0.15px;
+  color: #242A45;
+  margin-bottom: 24px;
+}
+
+.hero-text {
+  font-size: 18px;
+  line-height: 28px;
+  color: #242A45;
+  opacity: 0.5;
+  margin-bottom: 32px;
+}
+
+.hero-btn {
+  background: #5267DF;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  border: 2px solid transparent;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 10px 24px;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  color: #fff;
+  margin-right: 16px;
+}
+.hero-btn:hover {
+  background: #fff;
+  border: 2px solid #5267DF;
+  color: #5267DF;
+}
+
+
+
+.hero-btn2 {
+  background: #F7F7F7;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  border: 2px solid transparent;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 10px 24px;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  color: #242A45;
+  opacity: 0.75;
+}
+.hero-btn2:hover {
+  background: #fff;
+  border: 2px solid #5B6074;
+}
+
+.hero-img {
+  position: relative;
+  right: -65.5px;
+  width: 562px;
+  overflow: hidden;
+  border-radius: 25px;
 }
 
 /* SITE HERADER PART END */
@@ -46,13 +159,422 @@ main {
 
 /* SITE MAIN PART  */
 
+.main-title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 52px;
+  text-align: center;
+  letter-spacing: -0.1px;
+  color: #242A45;
+  margin-bottom: 16px;
+}
+
+.main-text {
+  width: 540px;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #242A45;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+}
+
+.main-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Features PART  */
+
+.main-features {
+  background-image: url('../imgs/left-backround.png');
+  background-size: auto 352px;
+  background-repeat: no-repeat;
+  background-position: bottom 149px left 200px;
+  padding-bottom: 149px;
+
+}
+
+.main-features-box {
+  width: 730px;
+  padding-top: 72px;
+  margin-bottom: 72px;
+  border-bottom: 1px solid rgba(73, 93, 207, 0.20012);
+}
+
+.main-features-subtitle {
+  font-weight: 400;
+  font-size: 16px;
+  padding: 0px 53px;
+  padding-bottom: 31px;
+  line-height: 17px;
+  letter-spacing: 0.533333px;
+  opacity: 0.75;
+  text-transform: capitalize;
+}
+.activ {
+  opacity: 1;
+  border-bottom: 4px solid #FA5959;
+}
+
+.main-features-link {
+  text-decoration: none;
+  color: #242A45;
+}
+
+.main-features-link:hover {
+  color: #FA5959;
+}
+
+.features-box {
+  padding-bottom: 89px;
+}
+
+.features-img {
+  width: 536px;
+  height: 346px;
+}
+
+.features-main {
+  width: 445px;
+}
+
+.features-title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 52px;
+  letter-spacing: -0.1px;
+  color: #242A45;
+  margin-bottom: 16px;
+}
+
+.features-text {
+  font-size: 18px;
+  line-height: 28px;
+  color: #242A45;
+  opacity: 0.5;
+  margin-bottom: 32px;
+}
+
+.features-btn {
+  background: #5267DF;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  border: none;
+  padding: 10px 24px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  color: #fff;
+  }
 
 
+
+
+/* DOWNLOAD PART  */
+
+.main-download {
+  padding-bottom: 149px;
+}
+
+
+.main-download-list {
+  list-style-type: none;
+  padding-top: 48px;
+}
+
+.main-download-item {
+  width: 280px;
+  height: 371px;
+  background: #fff;
+  box-shadow: 0px 10px 20px -5px rgba(73, 93, 207, 0.20012);
+  border-radius: 15px;
+  text-align: center;
+  overflow: hidden;
+  padding-bottom: 24px;
+  margin-right: 34px;
+  margin-bottom: 60px;
+}
+.box2 {
+  position: relative;
+  top: 40px;
+}
+
+.box3 {
+  position: relative;
+  top: 80px;
+}
+
+.main-download-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.25px;
+  color: #242A45;
+  margin-bottom: 6px;
+}
+.main-download-subtitle::before {
+  content: '';
+  display: flex;
+  position: relative;
+  left: 33%;
+  margin-top: 49px;
+  margin-bottom: 32px;
+  width: 105px;
+  height: 100px;
+  background-image: url('../imgs/chrome2.svg');
+  background-repeat: no-repeat;
+}
+
+.main-download-item:nth-child(2) .main-download-subtitle::before {
+  background-image: url('../imgs/firefox-icon.svg');
+}
+
+.main-download-item:nth-child(3) .main-download-subtitle::before {
+  width: 96px;
+  height: 100px;
+  background-image: url('../imgs/opera-icon.svg');
+}
+
+.main-download-desc {
+  font-size: 15px;
+  line-height: 28px;
+  text-align: center;
+  color: #242A45;
+  opacity: 0.5;
+}
+.main-download-desc::after {
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin-top: 32px;
+  margin-bottom: 24px;
+  width: 95%;
+  border-bottom: 4px dotted rgba(73, 93, 207, 0.20012);
+}
+
+.main-download-btn {
+  background: #5267DF;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  border: 2px solid transparent;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 10px 35px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: 0.25px;
+  color: #fff;
+  cursor: pointer;
+}
+.main-download-btn:hover {
+  background: #fff;
+  border: 2px solid #5267DF;
+  box-sizing: border-box;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  color: #5267df;
+}
+
+/* ASKED PART */
+
+.main-asked {
+  padding-bottom: 150px;
+}
+
+.asked-list {
+  list-style-type: none;
+  padding-top: 56px;
+  padding-bottom: 54px;
+}
+
+.asked-item {
+  width: 540px;
+  font-size: 18px;
+  text-align: left;
+  line-height: 32px;
+  padding: 19px 0px;
+  color: #242A45;
+  border-bottom: 1px solid #dedee3;
+}
+.asked-item:nth-child(1) {
+  border-top: 1px solid #dedee3;
+}
+.asked-item:hover {
+  color: #fa5959;
+}
+
+
+.bx-chevron-down {
+  font-size: 32px;
+  color: #5267DF;
+}
+.asked-item:hover .bx-chevron-down {
+  color: #fa5959;
+  transform: rotate(180deg);
+}
+
+.asked-btn {
+  background: #5267DF;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  border: none;
+  padding: 10px 24px;
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: capitalize;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  color: #fff;
+}
+
+.asked-drop {
+  display: none;
+  padding-top: 32px;
+  padding-bottom: 19px;
+}
+
+.asked-desc {
+  font-size: 16px;
+  line-height: 36px;
+  letter-spacing: 0.15px;
+  color: #242A45;
+  opacity: 0.75;
+}
+
+.asked-item:hover .asked-drop {
+  display: block;
+}
+
+/* JOINED PART  */
+
+.main-joined {
+  background-color: #5267df;
+  padding-top: 58px;
+  padding-bottom: 74px;
+}
+
+.joined-text {
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: 5px;
+  color: #fff;
+  margin-bottom: 24px;
+}
+
+.joined-title {
+  width: 408px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: -0.1px;
+  color: #fff;
+  margin-bottom: 36px;
+}
+
+.input-email {
+  width: 300px;
+  background-color: #fff;
+  border-radius: 5px;
+  border: none;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  color: rgba(36, 42, 69, 0.250109);
+  padding: 10px 20px;
+  margin-right: 16px;
+}
+.input-email:focus {
+  outline: none;
+  color: rgba(36, 42, 69, 0.250109);
+}
+
+.joined-btn {
+  background-color: #fa5959;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  border: 2px solid transparent;
+  padding: 10px 24px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  color: #fff;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+.joined-btn:hover {
+  background: #fff;
+  border: 2px solid #fa5959;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  color: #fa5959;
+}
 
 /* SITE MAIN END PART */
 
 
 /* SITE FOOTER PART  */
 
+.site-footer {
+  background-color: #242A45;
+  padding: 32px 0px;
+}
 
+.footer-logo {
+  width: 148px;
+  height: 25px;
+}
+
+.footer-nav-list {
+  list-style-type: none;
+  margin-left: 65px;
+}
+
+.footer-nav-item {
+  font-size: 13px;
+  line-height: 17px;
+  letter-spacing: 1.5px;
+  color: #fff;
+  text-transform: uppercase;
+  margin-right: 44px;
+}
+.footer-nav-item:nth-child(3) {
+  margin-right: 0px;
+}
+
+.footer-nav-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer-nav-item:hover .footer-nav-link {
+  color: #fa5959;
+}
+
+.socical-list {
+  list-style-type: none;
+  margin-left: 493px;
+}
+
+.socical-item {
+  margin-left: 40px;
+}
+.socical-item:nth-child(1) {
+  margin-left: 0px;
+}
+
+.icon-socical {
+  font-size: 32px;
+  color: #fff;
+}
+
+.socical-item:hover .icon-socical {
+  color: #fa5959;
+}
 /* SITE FOOTER PART END */
